force-app/main/default/objects/Account_Platform_Event__e/fields/Account_Industry__c.field-meta.xml
<CustomField>
    <fullName>Account_Industry__c</fullName>
    <label>Account Industry</label>
    <length>30</length>
    <type>Text</type>
</CustomField>