force-app/main/default/objects/Account_Platform_Event__e/fields/Account_Status__c.field-meta.xml
<CustomField>
    <fullName>Account_Status__c</fullName>
    <label>Account Status</label>
    <length>30</length>
    <type>Text</type>
</CustomField>